--- a/ClusterPipeline/templates/ClusterPipeline/home.html
+++ b/ClusterPipeline/templates/ClusterPipeline/home.html
@@ -82,6 +82,26 @@
         label {
             display: block; /* Ensure labels take up their own line */
         }
+        .loader {
+            border: 16px solid #f3f3f3; /* Light grey */
+            border-top: 16px solid #3498db; /* Blue */
+            border-radius: 50%;
+            width: 120px;
+            height: 120px;
+            animation: spin 2s linear infinite;
+            position: fixed; /* or absolute */
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000; /* Ensure it's above other items */
+            display: none; /* Hidden by default */
+        }
+
+        /* Add the keyframes for the spinning effect */
+        @keyframes spin {
+            0% { transform: translate(-50%, -50%) rotate(0deg); }
+            100% { transform: translate(-50%, -50%) rotate(360deg); }
+        }
     </style>
 </head>
 <body>
