--- a/ClusterPipeline/static/css/visualization_styles.css
+++ b/ClusterPipeline/static/css/visualization_styles.css
@@ -11,9 +11,10 @@
 
 .graph-container {
     flex: 1; /* Grow to available space */
-    max-width: 50%; /* Maximum width of the graph container */
+    max-width: 33%; /* Maximum width of the graph container */
     height: auto; /* Maintain aspect ratio of the graph */
     position: relative; /* Set the position context for the plot */
+    min-width: 0; /* If you're having issues with overflow, start with 0 */
 }
 
 .text-data-container {
@@ -21,7 +22,7 @@
     /* Optional: specify a min-width to ensure a minimum size for the text */
     min-width: 0; /* If you're having issues with overflow, start with 0 */
     /* Adjust padding or margin as needed */
-    margin-left: auto;
+    margin-left: 20px;
 }
 
 .text-data-container h3 {
