Initial model module more work needed

--- a/ClusterPipeline/templates/ClusterPipeline/create_run.html
+++ b/ClusterPipeline/templates/ClusterPipeline/create_run.html
@@ -112,7 +112,7 @@
         <select id="training_features" name="training_features" multiple size="5">
             <option value="PctChgVars">PctChgVars</option>
             <option value="CumulativeVars">CumulativeVars</option>
-            <option value="Rolling_vars">rolling_vars</option>
+            <option value="RollingVars">rolling_vars</option>
             <option value="PriceVars">PriceVars</option>
             <option value="TrendVars">TrendVars</option>
 
